--- a/src/dmdb/Controllers/NewTitle.fxml
+++ b/src/dmdb/Controllers/NewTitle.fxml
@@ -14,9 +14,9 @@
          <top>
             <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="24.0" prefWidth="616.0" BorderPane.alignment="CENTER">
               <items>
-                  <Button mnemonicParsing="false" onAction="#save" prefHeight="26.0" prefWidth="56.0" text="Save" />
-                <Button mnemonicParsing="false" onAction="#cancel" prefHeight="26.0" prefWidth="72.0" text="Cancel" GridPane.columnIndex="1" />
-                  <Label alignment="CENTER" prefHeight="19.0" prefWidth="433.0" text="New Title">
+                  <Button mnemonicParsing="false" onAction="#save" text="Save" />
+                <Button alignment="CENTER" mnemonicParsing="false" onAction="#cancel" prefHeight="26.0" prefWidth="72.0" text="Cancel" GridPane.columnIndex="1" />
+                  <Label alignment="CENTER" prefHeight="19.0" prefWidth="433.0" text="New Movie">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -25,44 +25,70 @@
             </ToolBar>
          </top>
          <center>
-            <VBox prefHeight="420.0" prefWidth="533.0">
+            <AnchorPane BorderPane.alignment="CENTER">
                <children>
-                  <HBox layoutY="32.0" prefHeight="259.0" prefWidth="619.0" GridPane.rowIndex="1">
+                  <HBox prefHeight="208.0" prefWidth="599.0" GridPane.hgrow="NEVER" GridPane.valignment="TOP" GridPane.vgrow="NEVER">
                      <children>
-                        <AnchorPane prefHeight="233.0" prefWidth="230.0">
+                        <AnchorPane prefHeight="215.0" prefWidth="230.0">
                            <children>
-                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="252.0" layoutY="7.0" stroke="BLACK" strokeType="INSIDE" width="230.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                               <Label layoutX="65.0" layoutY="79.0" text="Drop the photo" />
                            </children>
                            <HBox.margin>
                               <Insets bottom="5.0" left="5.0" top="5.0" />
                            </HBox.margin>
                         </AnchorPane>
-                        <VBox prefHeight="241.0" prefWidth="384.0" GridPane.columnIndex="1">
+                        <VBox prefHeight="314.0" prefWidth="364.0" GridPane.columnIndex="1">
                            <children>
                               <TextField fx:id="name" prefHeight="22.0" prefWidth="333.0" promptText="First Name">
                                  <VBox.margin>
                                     <Insets left="5.0" right="5.0" top="10.0" />
                                  </VBox.margin>
                               </TextField>
-                              <TextArea fx:id="biography" prefHeight="163.0" prefWidth="381.0" promptText="Breif Description" GridPane.rowIndex="1">
+                              <TextArea fx:id="biography" prefHeight="103.0" prefWidth="354.0" promptText="Breif Description" GridPane.rowIndex="1">
                                  <VBox.margin>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </VBox.margin>
                               </TextArea>
-                              <DatePicker fx:id="date" prefHeight="26.0" prefWidth="147.0" promptText="MM/DD/YYYY" GridPane.rowIndex="2">
-                                 <HBox.margin>
-                                    <Insets />
-                                 </HBox.margin>
+                              <HBox>
+                                 <children>
+                                    <Label text="Release Date:">
+                                       <HBox.margin>
+                                          <Insets top="5.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <DatePicker fx:id="date" prefHeight="26.0" prefWidth="147.0" promptText="MM/DD/YYYY" GridPane.rowIndex="2">
+                                       <HBox.margin>
+                                          <Insets left="10.0" />
+                                       </HBox.margin>
+                                       <VBox.margin>
+                                          <Insets bottom="5.0" left="5.0" right="5.0" />
+                                       </VBox.margin>
+                                    </DatePicker>
+                                 </children>
                                  <VBox.margin>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" />
+                                    <Insets bottom="5.0" left="5.0" />
                                  </VBox.margin>
-                              </DatePicker>
-                              <ChoiceBox fx:id="genereBox" prefHeight="26.0" prefWidth="146.0">
+                              </HBox>
+                              <HBox>
+                                 <children>
+                                    <Label text="Genere:">
+                                       <HBox.margin>
+                                          <Insets top="5.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <ChoiceBox fx:id="genereBox" prefHeight="26.0" prefWidth="146.0">
+                                       <VBox.margin>
+                                          <Insets bottom="5.0" left="5.0" right="5.0" />
+                                       </VBox.margin>
+                                       <HBox.margin>
+                                          <Insets left="45.0" />
+                                       </HBox.margin>
+                                    </ChoiceBox>
+                                 </children>
                                  <VBox.margin>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" />
+                                    <Insets bottom="5.0" left="5.0" />
                                  </VBox.margin>
-                              </ChoiceBox>
+                              </HBox>
                            </children>
                         </VBox>
                      </children>
@@ -70,57 +96,76 @@
                         <Insets left="10.0" right="10.0" top="10.0" />
                      </VBox.margin>
                   </HBox>
-                  <HBox>
-                     <children>
-                        <Label prefHeight="25.0" prefWidth="47.0" text="Director">
-                           <opaqueInsets>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </opaqueInsets>
-                           <HBox.margin>
-                              <Insets right="5.0" />
-                           </HBox.margin>
-                        </Label>
-                        <ComboBox fx:id="directorCombo" editable="true" prefHeight="26.0" prefWidth="249.0" promptText="Search &amp; Select Director">
-                           <VBox.margin>
-                              <Insets />
-                           </VBox.margin>
-                        </ComboBox>
-                     </children>
-                     <VBox.margin>
-                        <Insets left="5.0" top="5.0" />
-                     </VBox.margin>
-                  </HBox>
-                  <HBox layoutX="5.0" layoutY="308.0" GridPane.rowIndex="2">
-                     <children>
-                        <Label prefHeight="25.0" prefWidth="47.0" text="Cast" GridPane.columnIndex="1">
-                           <opaqueInsets>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </opaqueInsets>
-                           <HBox.margin>
-                              <Insets bottom="5.0" left="5.0" />
-                           </HBox.margin>
-                        </Label>
-                        <ComboBox fx:id="artistsCombo" editable="true" prefHeight="26.0" prefWidth="249.0" promptText="Search &amp; Select more artists" GridPane.columnIndex="2">
-                           <HBox.margin>
-                              <Insets bottom="5.0" left="5.0" />
-                           </HBox.margin>
-                        </ComboBox>
-                        <Button mnemonicParsing="false" onAction="#delete" prefHeight="26.0" prefWidth="66.0" text="Delete" GridPane.columnIndex="4">
-                           <HBox.margin>
-                              <Insets bottom="5.0" left="5.0" right="5.0" />
-                           </HBox.margin>
-                        </Button>
-                     </children>
-                     <GridPane.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </GridPane.margin>
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </HBox>
-                  <ListView prefHeight="232.0" prefWidth="619.0" />
+                  <TabPane layoutY="213.0" prefHeight="312.0" prefWidth="619.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="213.0" GridPane.rowIndex="1">
+                     <tabs>
+                        <Tab text="Cast">
+                           <content>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <HBox layoutX="215.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" GridPane.rowIndex="2">
+                                       <GridPane.margin>
+                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                       </GridPane.margin>
+                                       <VBox.margin>
+                                          <Insets top="5.0" />
+                                       </VBox.margin>
+                                    </HBox>
+                                    <ToolBar layoutX="104.0" layoutY="14.0" prefHeight="40.0" prefWidth="330.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <items>
+                                          <ComboBox fx:id="artistsCombo" editable="true" onAction="#selectArtistComboItem" onKeyReleased="#updateArtistComboList" prefHeight="27.0" prefWidth="259.0" promptText="Search &amp; Select more artists" />
+                                          <Button mnemonicParsing="false" onAction="#deletedArtist" prefHeight="26.0" prefWidth="66.0" text="Delete" />
+                                       </items>
+                                    </ToolBar>
+                                    <TableView fx:id="artistsTable" layoutX="61.0" layoutY="54.0" prefHeight="215.0" prefWidth="384.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
+                                       <columns>
+                                          <TableColumn prefWidth="120.0" text="Image" />
+                                          <TableColumn fx:id="a_firstNameCol" minWidth="0.0" prefWidth="221.0" text="First Name" />
+                                          <TableColumn fx:id="a_lastNameCol" prefWidth="75.0" text="Last Name" />
+                                       </columns>
+                                    </TableView>
+                                 </children>
+                              </AnchorPane>
+                           </content>
+                        </Tab>
+                        <Tab text="Directors">
+                           <content>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <HBox layoutX="215.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" GridPane.rowIndex="2">
+                                       <GridPane.margin>
+                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                       </GridPane.margin>
+                                       <VBox.margin>
+                                          <Insets top="5.0" />
+                                       </VBox.margin>
+                                    </HBox>
+                                    <TableView fx:id="directorsTable" layoutX="40.0" layoutY="69.0" prefHeight="215.0" prefWidth="384.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
+                                       <columns>
+                                          <TableColumn prefWidth="120.0" text="Image" />
+                                          <TableColumn fx:id="d_firstNameCol" minWidth="0.0" prefWidth="221.0" text="First Name" />
+                                          <TableColumn fx:id="d_lastNameCol" prefWidth="75.0" text="Last Name" />
+                                       </columns>
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
+                                    </TableView>
+                                    <ToolBar layoutX="104.0" layoutY="14.0" prefHeight="40.0" prefWidth="330.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <items>
+                                          <ComboBox fx:id="directorCombo" editable="true" onAction="#selectDirectorComboItem" onKeyReleased="#updateDirectorComboList" prefHeight="27.0" prefWidth="259.0" promptText="Search &amp; Select more directors" />
+                                          <Button mnemonicParsing="false" onAction="#deleteDirector" prefHeight="26.0" prefWidth="66.0" text="Delete" />
+                                       </items>
+                                    </ToolBar>
+                                 </children>
+                              </AnchorPane>
+                           </content>
+                        </Tab>
+                     </tabs>
+                  </TabPane>
                </children>
-            </VBox>
+            </AnchorPane>
          </center>
       </BorderPane>
    </children>
